# stem-splitter

./: AGENTS.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
